--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,12 @@ body{
 }
 header{
     height: 60px;
-    padding: 10px;
+    padding: 10px 30px;
+    display: grid;
+    grid-template-columns: 1fr 6fr;
+    gap: 30px;
+}
+.container-logo{
     display: flex;
     align-items: center;
     gap: 10px;
@@ -17,7 +22,7 @@ header{
 }
 main{
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 6fr;
     padding: 10px 30px;
     min-height: 70vh;
     gap: 30px;
@@ -27,6 +32,18 @@ main{
     border-radius: 30px;
     padding: 30px;
     min-height: 80%;
+}
+
+#listaArchivos{
+    padding: 10px;
+}
+.file{
+    padding: 10px 2px;
+    border-top: solid 1px #a7a7a7;
+    display: flex;
+    align-items: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 14px;
 }
 
 button{
@@ -39,6 +56,38 @@ button{
     min-width: 6.25rem;
     padding: 1.125rem 1.25rem 1.125rem 1rem;
     place-content: center start;
+    border-radius: 10px;
+    background-color: #ffffff;
 }
-
+span{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px
+}
+ul{
+    padding: 0;
+}
+li{
+    background-color: #c2e7ff;
+    border-radius: 100px;
+    height: 32px;
+    padding: 0 10px;
+    white-space: nowrap;
+    width: 100%;
+    margin: 10px 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+}
+input[type="search"] {
+    height: 46px;
+    width: 80%;
+    background-color: #e3ecfc;
+    border: none;
+    outline: none;
+    border-radius: 100px;
+    padding: 5px 10px;
+  }
 
